external-crates/move/crates/move-compiler/tests/move_2024/struct_invalid_visibility_progress_inside.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01003]: invalid modifier
  ┌─ tests/move_2024/struct_invalid_visibility_progress_inside.move:2:5
  │
2 │     struct Foo {
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/struct_invalid_visibility_progress_inside.move:3:12
  │
2 │     struct Foo {
  │            --- Similarly named defintion found here
3 │         x: Bar<foo>,
  │            ^^^
  │            │
  │            Could not resolve the name 'Bar'
  │            Did you mean: 'Foo'
